// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. icondiamond sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
/>
`;

exports[`2. icontwitter sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 62.5,
    }
  }
/>
`;

exports[`3. iconvideo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 48.608695652173914,
      "width": 86,
    }
  }
/>
`;

exports[`4. iconemail sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 68.75,
    }
  }
/>
`;

exports[`5. iconstar sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
/>
`;

exports[`6. iconfacebook sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 25,
    }
  }
/>
`;

exports[`7. thetimeslogo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
/>
`;
